--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
     <div class="input-container">
         <h2>연무중 반 정보 입력하기</h2>
-        <input type="number" id="classNum" placeholder="반 번호 입력" min="1" max="12">
+        <input type="number" id="classNum" placeholder="반 입력" min="1" max="12">
         <input type="text" id="name" placeholder="이름 입력">
         <button onclick="saveData()">저장하기</button>
         <p id="message" class="error"></p>
