--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>반 정보 입력</title>
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,8 +70,13 @@
     <div class="developer-info">
         <p>개발자: 2학년 6반 정지윤 (Discord: ste.ki)</p>
     </div>
-    
-    <script>
+
+    <!-- Firebase SDK -->
+    <script type="module">
+        // Firebase SDK 불러오기
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getDatabase, ref, push, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+
         // Firebase 설정
         const firebaseConfig = {
             apiKey: "AIzaSyC0vLUUUZjb1OVe84Cm7i7lgliBxbEwgs8",
@@ -87,8 +90,8 @@
         };
 
         // Firebase 초기화
-        firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
 
         // 데이터 저장 함수
         function saveData() {
@@ -96,34 +99,34 @@
             const name = document.getElementById("name").value;
             const message = document.getElementById("message");
 
-            if (classNum < 1 || classNum > 12) {
-                message.textContent = "반 번호는 1부터 12 사이여야 합니다!";
-                return;
-            }
-            if (!name) {
-                message.textContent = "이름을 입력하세요!";
+            if (!classNum || !name) {
+                message.textContent = "반 번호와 이름을 입력하세요!";
                 return;
             }
 
             // Firebase Realtime Database에 저장
-            const newEntryRef = database.ref("classData").push();
-            newEntryRef.set({ classNum, name });
-
-            message.textContent = "저장되었습니다!";
-            document.getElementById("classNum").value = "";
-            document.getElementById("name").value = "";
+            const newEntryRef = push(ref(database, "classData"));
+            set(newEntryRef, { classNum, name })
+                .then(() => {
+                    message.textContent = "저장되었습니다!";
+                    document.getElementById("classNum").value = "";
+                    document.getElementById("name").value = "";
+                })
+                .catch((error) => {
+                    console.error("저장 오류:", error);
+                    message.textContent = "저장에 실패했습니다. 콘솔을 확인하세요!";
+                });
         }
 
-        // 데이터 불러오기 및 화면에 표시
+        // 데이터 불러오기 및 화면 표시
         function loadData() {
             const classLists = document.getElementById("classLists");
             classLists.innerHTML = "";
 
-            database.ref("classData").once("value", (snapshot) => {
+            onValue(ref(database, "classData"), (snapshot) => {
                 let data = snapshot.val() || {};
                 let groupedData = {};
 
-                // 데이터를 반 번호별로 정리
                 Object.values(data).forEach(entry => {
                     if (!groupedData[entry.classNum]) {
                         groupedData[entry.classNum] = [];
@@ -131,7 +134,6 @@
                     groupedData[entry.classNum].push(entry);
                 });
 
-                // 화면에 표시
                 for (let classNum in groupedData) {
                     const classContainer = document.createElement("div");
                     classContainer.classList.add("class-container");
@@ -154,11 +156,7 @@
             });
         }
 
-        // Firebase 데이터 변경 감지 (실시간 업데이트)
-        database.ref("classData").on("value", () => {
-            loadData();
-        });
-
+        // 페이지 로드 시 데이터 불러오기
         window.onload = loadData;
     </script>
 </body>
