--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <input type="text" id="name" placeholder="이름 입력">
         <button id="saveBtn">저장하기</button>
         <p id="message" class="error"></p>
-        <p class="warning">(*2학년 전용입니다, 장난으로 입력하지 마세요)</p>
+        <p class="warning">(*2학년 전용입니다, 장난으로 입력하지 마세요, 입력하고나니까 페이지가 이상해요 -> 새로고침)</p>
     </div>
     <div id="classLists"></div>
     <div class="developer-info">
