--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             border-radius: 5px;
             margin-bottom: 5px;
         }
+        button {
+            background-color: #6c5ce7;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
