--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
             color: #f39c12;
             margin-bottom: 15px;
         }
+        .message {
+            font-size: 14px;
+            color: green;
+            margin-top: 10px;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+        .error {
+            color: red;
+        }
         .input-container input, .input-container button {
             display: block;
             width: 80%;
@@ -48,7 +58,6 @@
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 10px;
-            text-align: left;
         }
         .student-box {
             background: #f1f1f1;
@@ -56,130 +65,132 @@
             border-radius: 5px;
             margin-bottom: 5px;
         }
-        .message-box {
-            position: absolute;
-            top: -40px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 14px;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            border-radius: 5px;
-            opacity: 0;
-            transition: opacity 0.5s, transform 0.5s;
+        .red {
+            color: red;
         }
-        .message-box.show {
-            opacity: 1;
-            transform: translate(-50%, -60px);
+        button {
+            background-color: #6c5ce7;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
         }
     </style>
-</head>
-<body>
-    <div class="input-container">
-        <h2>연무중 반 정보 입력하기</h2>
-        <p class="warning">(*연무중 2학년 전용, 장난으로 입력하지 마세요)</p>
-        <div id="messageBox" class="message-box"></div>
-        <input type="number" id="classNum" placeholder="반 번호 입력" min="1" max="12">
-        <input type="text" id="name" placeholder="이름 입력">
-        <button id="saveBtn">저장하기</button>
-    </div>
-    <div id="classLists"></div>
-
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getDatabase, ref, push, set, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+        import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
+        // Firebase 설정
         const firebaseConfig = {
             apiKey: "AIzaSyC0vLUUUZjb1OVe84Cm7i7lgliBxbEwgs8",
             authDomain: "hrhhrrhr-608cf.firebaseapp.com",
             databaseURL: "https://hrhhrrhr-608cf-default-rtdb.firebaseio.com",
             projectId: "hrhhrrhr-608cf",
-            storageBucket: "hrhhrrhr-608cf.firebasestorage.app",
+            storageBucket: "hrhhrrhr-608cf.appspot.com",
             messagingSenderId: "730488926761",
             appId: "1:730488926761:web:6a0d9b1a8820c82ebc2238",
             measurementId: "G-HNSD47GDT0"
         };
 
+        // Firebase 초기화
         const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
 
-        function showMessage(text, type = "success") {
-            const messageBox = document.getElementById("messageBox");
-            messageBox.textContent = text;
-            messageBox.style.backgroundColor = type === "error" ? "#e74c3c" : "#2ecc71";
-            messageBox.classList.add("show");
-
+        function showMessage(msg, isError = false) {
+            const messageEl = document.getElementById("message");
+            messageEl.textContent = msg;
+            messageEl.className = isError ? "message error" : "message";
+            messageEl.style.opacity = "1";
             setTimeout(() => {
-                messageBox.classList.remove("show");
-            }, 2000);
+                messageEl.style.opacity = "0";
+            }, 3000);
         }
 
-        function saveData() {
+        async function saveData() {
             const classNum = document.getElementById("classNum").value;
             const name = document.getElementById("name").value;
 
             if (!classNum || !name) {
-                showMessage("반 번호와 이름을 입력하세요!", "error");
+                showMessage("반 번호와 이름을 입력하세요!", true);
                 return;
             }
 
-            const newEntryRef = push(ref(database, "classData"));
-            set(newEntryRef, { classNum, name })
-                .then(() => {
-                    showMessage("저장되었습니다!");
-                    document.getElementById("classNum").value = "";
-                    document.getElementById("name").value = "";
-                })
-                .catch((error) => {
-                    console.error("저장 오류:", error);
-                    showMessage("저장에 실패했습니다!", "error");
-                });
+            const dbRef = ref(database, "classData");
+            const snapshot = await get(dbRef);
+
+            let data = snapshot.exists() ? snapshot.val() : {};
+
+            // 중복 검사
+            for (let key in data) {
+                if (data[key].name === name && data[key].classNum === classNum) {
+                    showMessage("이미 같은 반에 같은 이름이 있습니다!", true);
+                    return;
+                }
+            }
+
+            // 데이터 저장
+            const newKey = new Date().getTime();
+            set(ref(database, "classData/" + newKey), { classNum, name });
+
+            showMessage("저장되었습니다!", false);
+            loadData();
         }
 
-        function loadData() {
+        async function loadData() {
             const classLists = document.getElementById("classLists");
+            classLists.innerHTML = "";
+            const dbRef = ref(database, "classData");
+            const snapshot = await get(dbRef);
+            let data = snapshot.exists() ? snapshot.val() : {};
 
-            onValue(ref(database, "classData"), (snapshot) => {
-                classLists.innerHTML = "";
+            let groupedData = {};
 
-                let data = snapshot.val() || {};
-                let groupedData = {};
+            // 데이터를 반별로 그룹화
+            Object.values(data).forEach(entry => {
+                if (!groupedData[entry.classNum]) {
+                    groupedData[entry.classNum] = [];
+                }
+                groupedData[entry.classNum].push(entry);
+            });
 
-                Object.values(data).forEach(entry => {
-                    if (!groupedData[entry.classNum]) {
-                        groupedData[entry.classNum] = [];
+            let allNames = Object.values(data).map(entry => entry.name);
+            
+            // UI에 반영
+            for (let classNum in groupedData) {
+                const classContainer = document.createElement("div");
+                classContainer.classList.add("class-container");
+                const className = document.createElement("div");
+                className.classList.add("class-name");
+                className.textContent = `👥 ${classNum}반 학생 목록`;
+                classContainer.appendChild(className);
+
+                groupedData[classNum].forEach(entry => {
+                    const studentBox = document.createElement("div");
+                    studentBox.classList.add("student-box");
+                    studentBox.textContent = entry.name;
+
+                    // 같은 이름이 다른 반에 존재하면 빨간색 표시
+                    if (allNames.filter(n => n === entry.name).length > 1) {
+                        studentBox.classList.add("red");
                     }
-                    groupedData[entry.classNum].push(entry);
+                    classContainer.appendChild(studentBox);
                 });
 
-                for (let classNum in groupedData) {
-                    const classContainer = document.createElement("div");
-                    classContainer.classList.add("class-container");
-
-                    const className = document.createElement("div");
-                    className.classList.add("class-name");
-                    className.textContent = `👥 ${classNum}반 학생 목록`;
-
-                    classContainer.appendChild(className);
-
-                    groupedData[classNum].forEach(entry => {
-                        const studentBox = document.createElement("div");
-                        studentBox.classList.add("student-box");
-                        studentBox.textContent = entry.name;
-                        classContainer.appendChild(studentBox);
-                    });
-
-                    classLists.appendChild(classContainer);
-                }
-            });
+                classLists.appendChild(classContainer);
+            }
         }
 
         window.onload = loadData;
-        document.getElementById("saveBtn").addEventListener("click", () => {
-            saveData();
-            loadData();
-        });
     </script>
+</head>
+<body>
+    <div class="input-container">
+        <h2>연무중 반 정보 입력하기</h2>
+        <p class="warning">(*연무중 2학년 전용, 장난으로 입력하지 마세요)</p>
+        <input type="number" id="classNum" placeholder="반 번호 입력" min="1" max="12">
+        <input type="text" id="name" placeholder="이름 입력">
+        <button onclick="saveData()">저장하기</button>
+        <p id="message" class="message"></p>
+    </div>
+    <div id="classLists"></div>
 </body>
 </html>
