--- a/index.html
+++ b/index.html
@@ -76,111 +76,108 @@
         }
     </style>
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
-        // Firebase 설정
-        const firebaseConfig = {
-            apiKey: "AIzaSyC0vLUUUZjb1OVe84Cm7i7lgliBxbEwgs8",
-            authDomain: "hrhhrrhr-608cf.firebaseapp.com",
-            databaseURL: "https://hrhhrrhr-608cf-default-rtdb.firebaseio.com",
-            projectId: "hrhhrrhr-608cf",
-            storageBucket: "hrhhrrhr-608cf.appspot.com",
-            messagingSenderId: "730488926761",
-            appId: "1:730488926761:web:6a0d9b1a8820c82ebc2238",
-            measurementId: "G-HNSD47GDT0"
-        };
+    // Firebase 설정
+    const firebaseConfig = {
+        apiKey: "AIzaSyC0vLUUUZjb1OVe84Cm7i7lgliBxbEwgs8",
+        authDomain: "hrhhrrhr-608cf.firebaseapp.com",
+        databaseURL: "https://hrhhrrhr-608cf-default-rtdb.firebaseio.com",
+        projectId: "hrhhrrhr-608cf",
+        storageBucket: "hrhhrrhr-608cf.appspot.com",
+        messagingSenderId: "730488926761",
+        appId: "1:730488926761:web:6a0d9b1a8820c82ebc2238",
+        measurementId: "G-HNSD47GDT0"
+    };
 
-        // Firebase 초기화
-        const app = initializeApp(firebaseConfig);
-        const database = getDatabase(app);
+    // Firebase 초기화
+    const app = initializeApp(firebaseConfig);
+    const database = getDatabase(app);
 
-        function showMessage(msg, isError = false) {
-            const messageEl = document.getElementById("message");
-            messageEl.textContent = msg;
-            messageEl.className = isError ? "message error" : "message";
-            messageEl.style.opacity = "1";
-            setTimeout(() => {
-                messageEl.style.opacity = "0";
-            }, 3000);
+    function showMessage(msg, isError = false) {
+        const messageEl = document.getElementById("message");
+        messageEl.textContent = msg;
+        messageEl.className = isError ? "message error" : "message";
+        messageEl.style.opacity = "1";
+        setTimeout(() => {
+            messageEl.style.opacity = "0";
+        }, 3000);
+    }
+
+    async function saveData() {
+        const classNum = document.getElementById("classNum").value;
+        const name = document.getElementById("name").value;
+
+        if (!classNum || !name) {
+            showMessage("반 번호와 이름을 입력하세요!", true);
+            return;
         }
 
-        async function saveData() {
-            const classNum = document.getElementById("classNum").value;
-            const name = document.getElementById("name").value;
+        const dbRef = ref(database, "classData");
+        const snapshot = await get(dbRef);
 
-            if (!classNum || !name) {
-                showMessage("반 번호와 이름을 입력하세요!", true);
+        let data = snapshot.exists() ? snapshot.val() : {};
+
+        // 중복 검사
+        for (let key in data) {
+            if (data[key].name === name && data[key].classNum === classNum) {
+                showMessage("이미 같은 반에 같은 이름이 있습니다!", true);
                 return;
             }
-
-            const dbRef = ref(database, "classData");
-            const snapshot = await get(dbRef);
-
-            let data = snapshot.exists() ? snapshot.val() : {};
-
-            // 중복 검사
-            for (let key in data) {
-                if (data[key].name === name && data[key].classNum === classNum) {
-                    showMessage("이미 같은 반에 같은 이름이 있습니다!", true);
-                    return;
-                }
-            }
-
-            // 데이터 저장
-            const newKey = new Date().getTime();
-            set(ref(database, "classData/" + newKey), { classNum, name });
-
-            showMessage("저장되었습니다!", false);
-            loadData();
         }
 
-        async function loadData() {
-            const classLists = document.getElementById("classLists");
-            classLists.innerHTML = "";
-            const dbRef = ref(database, "classData");
-            const snapshot = await get(dbRef);
-            let data = snapshot.exists() ? snapshot.val() : {};
+        // 데이터 저장
+        const newKey = new Date().getTime();
+        set(ref(database, "classData/" + newKey), { classNum, name });
 
-            let groupedData = {};
+        showMessage("저장되었습니다!", false);
+        loadData();
+    }
 
-            // 데이터를 반별로 그룹화
-            Object.values(data).forEach(entry => {
-                if (!groupedData[entry.classNum]) {
-                    groupedData[entry.classNum] = [];
+    async function loadData() {
+        const classLists = document.getElementById("classLists");
+        classLists.innerHTML = "";
+        const dbRef = ref(database, "classData");
+        const snapshot = await get(dbRef);
+        let data = snapshot.exists() ? snapshot.val() : {};
+
+        let groupedData = {};
+        Object.values(data).forEach(entry => {
+            if (!groupedData[entry.classNum]) {
+                groupedData[entry.classNum] = [];
+            }
+            groupedData[entry.classNum].push(entry);
+        });
+
+        let allNames = Object.values(data).map(entry => entry.name);
+        
+        for (let classNum in groupedData) {
+            const classContainer = document.createElement("div");
+            classContainer.classList.add("class-container");
+            const className = document.createElement("div");
+            className.classList.add("class-name");
+            className.textContent = `👥 ${classNum}반 학생 목록`;
+            classContainer.appendChild(className);
+
+            groupedData[classNum].forEach(entry => {
+                const studentBox = document.createElement("div");
+                studentBox.classList.add("student-box");
+                studentBox.textContent = entry.name;
+
+                if (allNames.filter(n => n === entry.name).length > 1) {
+                    studentBox.classList.add("red");
                 }
-                groupedData[entry.classNum].push(entry);
+                classContainer.appendChild(studentBox);
             });
 
-            let allNames = Object.values(data).map(entry => entry.name);
-            
-            // UI에 반영
-            for (let classNum in groupedData) {
-                const classContainer = document.createElement("div");
-                classContainer.classList.add("class-container");
-                const className = document.createElement("div");
-                className.classList.add("class-name");
-                className.textContent = `👥 ${classNum}반 학생 목록`;
-                classContainer.appendChild(className);
-
-                groupedData[classNum].forEach(entry => {
-                    const studentBox = document.createElement("div");
-                    studentBox.classList.add("student-box");
-                    studentBox.textContent = entry.name;
-
-                    // 같은 이름이 다른 반에 존재하면 빨간색 표시
-                    if (allNames.filter(n => n === entry.name).length > 1) {
-                        studentBox.classList.add("red");
-                    }
-                    classContainer.appendChild(studentBox);
-                });
-
-                classLists.appendChild(classContainer);
-            }
+            classLists.appendChild(classContainer);
         }
+    }
 
-        window.onload = loadData;
-    </script>
+    window.onload = loadData;
+    window.saveData = saveData;
+</script>
 </head>
 <body>
     <div class="input-container">
