--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         <input type="text" id="name" placeholder="이름 입력">
         <button id="saveButton">저장하기</button>
         <p id="message" class="message"></p>
-        <p class="developer-info">Developer - 2학년 6반 정지윤 (Discord: ste.ki)</p>
+        <p class="developer-info">Developer - Discord: ste.ki | Instargram: yeojix_</p>
+        <p class="developer-info">"오타, 문의, 이름 내려주세요" 디코 혹은 인스타로 연락주세요</p>
     </div>
     <div id="classLists"></div>
 
