--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             font-size: 12px;
             color: gray;
         }
+        button {
+            background-color: #6c5ce7;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
