--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="input-container">
         <h2>연무중 반 정보 입력하기</h2>
         <p class="warning">(*연무중 2학년 전용, 장난으로 입력하지 마세요, 제발 2025학년도 반배정으로..)</p>
-        <input type="number" id="classNum" placeholder="반 번호 입력" min="1" max="12">
+        <input type="number" id="classNum" placeholder="반 입력" min="1" max="12">
         <input type="text" id="name" placeholder="이름 입력">
         <button id="saveButton">저장하기</button>
         <p id="message" class="message"></p>
